<resources>
    <string name="app_name">Convidados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all_guasts">Todos</string>
    <string name="menu_presents">Presentes</string>
    <string name="menu_absents">Ausentes</string>
    <string name="name">Nome</string>
    <string name="exemple_victor_pereira">Example: Victor Pereira</string>
    <string name="confirmation">Confirmação</string>
    <string name="present">Presente</string>
    <string name="absenst">Ausente</string>
    <string name="save">Salvar</string>
    <string name="success">Sucesso</string>
    <string name="fail">Falha</string>
    <string name="remocao_convidado">Remoção de convidado</string>
    <string name="deseja_remover">Deseja remover o convidado?</string>
    <string name="remover">Remover</string>
    <string name="cancelar">Cancelar</string>
</resources>